Problem on iphone solved

--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -12,7 +12,7 @@
   width: 100%;
   height: 100%;
   font-family: 'Poppins', sans-serif;
-  overflow-x: hidden;
+
 }
 
 .wrap {
